duper/src/serde/snapshots/duper__serde__meta__serde_meta_tests__serialize_array.snap
---
source: duper/src/serde/meta.rs
expression: "serialize_meta(&DuperValue\n{ identifier: None, inner: DuperInner::Array(DuperArray(vec![])), })"
---
DuperValue({
  identifier: null,
  inner: [],
  type: "Array",
})
