duper/src/serde/snapshots/duper__serde__meta__serde_meta_tests__serialize_object-2.snap
---
source: duper/src/serde/meta.rs
expression: serialized
---
DuperValue({
  identifier: "Outer",
  inner: {
    foo: DuperValue({
      identifier: "Inner",
      inner: {},
      type: "Object",
    }),
  },
  type: "Object",
})
