duper/src/serde/snapshots/duper__serde__meta__serde_meta_tests__serialize_object.snap
---
source: duper/src/serde/meta.rs
expression: serialized
---
DuperValue({
  identifier: null,
  inner: {},
  type: "Object",
})
