duper/src/serde/snapshots/duper__serde__meta__serde_meta_tests__serialize_scalars-2.snap
---
source: duper/src/serde/meta.rs
expression: serialized
---
DuperValue({
  identifier: "MyScalars",
  inner: [
    DuperValue({
      identifier: "MyString",
      inner: "Hello world!",
      type: "string",
    }),
    DuperValue({
      identifier: "MyBytes",
      inner: br"/\",
      type: "bytes",
    }),
    DuperValue({
      identifier: "MyTemporal",
      inner: "2022-02-28T03:06:00.092121729Z",
      type: "temporal",
    }),
    DuperValue({
      identifier: "MyInt",
      inner: 1337,
      type: "integer",
    }),
    DuperValue({
      identifier: "MyFloat",
      inner: 8.25,
      type: "float",
    }),
    DuperValue({
      identifier: "MyBool",
      inner: true,
      type: "boolean",
    }),
    DuperValue({
      identifier: "Mysterious",
      inner: null,
      type: "null",
    }),
  ],
  type: "array",
})
