duper/src/serde/snapshots/duper__serde__meta__serde_meta_tests__serialize_scalars.snap
---
source: duper/src/serde/meta.rs
expression: serialized
---
DuperValue({
  identifier: null,
  inner: {
    string: DuperValue({
      identifier: null,
      inner: "Hello world!",
      type: "String",
    }),
    bytes: DuperValue({
      identifier: null,
      inner: br"/\",
      type: "Bytes",
    }),
    temporal: DuperValue({
      identifier: "Instant",
      inner: "2022-02-28T03:06:00.092121729Z",
      type: "Temporal",
    }),
    integer: DuperValue({
      identifier: null,
      inner: 1337,
      type: "Integer",
    }),
    float: DuperValue({
      identifier: null,
      inner: 8.25,
      type: "Float",
    }),
    boolean: DuperValue({
      identifier: null,
      inner: true,
      type: "Boolean",
    }),
    null: DuperValue({
      identifier: null,
      inner: null,
      type: "Null",
    }),
  },
  type: "Object",
})
