duper/src/serde/snapshots/duper__serde__meta__serde_meta_tests__serialize_tuple-2.snap
---
source: duper/src/serde/meta.rs
expression: serialized
---
DuperValue({
  identifier: "Outer",
  inner: (DuperValue({
    identifier: "Inner",
    inner: (),
    type: "Tuple",
  })),
  type: "Tuple",
})
