duper/src/serde/snapshots/duper__serde__meta__serde_meta_tests__serialize_tuple.snap
---
source: duper/src/serde/meta.rs
expression: serialized
---
DuperValue({
  identifier: null,
  inner: (),
  type: "tuple",
})
